autumn/tests/compile-fail/non_function.rs
use autumn::get;

#[get("/hello")]
struct Hello;

fn main() {}
