autumn/tests/compile-fail/non_function.stderr
error: expected `fn`
 --> tests/compile-fail/non_function.rs:4:1
  |
4 | struct Hello;
  | ^^^^^^
